<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.serwis.gamesofthronesquizapp.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#819ca9"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/llay">
    <TextView
        style="@style/basic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hell"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint1"
        android:id="@+id/name"
        style="@style/basic"
        android:textColorHint="#62eeff"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/llay">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/basic"
        android:text="@string/drink"
                />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/anwser"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1"
            android:id="@+id/radio1"
            style="@style/checkbox"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio2"
            android:id="@+id/radio2"
            style="@style/checkbox"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio3"
            android:id="@+id/radio3"
            style="@style/checkbox"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio4"
            android:id="@+id/radio4"
            style="@style/checkbox"
            />
    </RadioGroup></LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/llay">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/basic"
        android:text="@string/quest2"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/anwser"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio5"
            android:id="@+id/radio5"
            style="@style/checkbox"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio6"
            android:id="@+id/radio6"
            style="@style/checkbox"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio7"
            android:id="@+id/radio7"
            style="@style/checkbox"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio8"
            android:id="@+id/radio8"
            style="@style/checkbox"
            />
    </RadioGroup></LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/llay">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/basic"
        android:text="@string/quest3"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/anwser"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio9"
            android:id="@+id/radio9"
            style="@style/checkbox"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio10"
            style="@style/checkbox"
            android:id="@+id/radio10"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio11"
            android:id="@+id/radio11"
            style="@style/checkbox"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio12"
            android:id="@+id/radio12"
            style="@style/checkbox"
            />
    </RadioGroup></LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/llay">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/basic"
        android:text="@string/quest4"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/anwser"
        android:orientation="vertical">
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check1"
            android:id="@+id/check1"
            style="@style/checkbox"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check2"
            style="@style/checkbox"
            android:id="@+id/check2"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check3"
            android:id="@+id/check3"
            style="@style/checkbox"/>
    </LinearLayout></LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/llay">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/basic"
        android:text="@string/result"
        /></LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tell me!"
        android:onClick="Score"
        android:textColor="@color/colorAccent"/>


</LinearLayout>

</ScrollView>
